- synchronize positions (also on connect) - synchronize z-index correct - prevend duplicate elements on reconnect

--- a/sass/stylesheet.scss
+++ b/sass/stylesheet.scss
@@ -74,6 +74,7 @@ body {
 	left: 0;
 	margin: 3% -0.5% 5% -0.5%;
 	overflow: hidden;
+	padding-top: 25px;
 	position: absolute;
 	top: 0;
 	width: 100%;
